--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#headerRank{
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: #007bff;
+    color: #fff;
+    padding: 4%;
+    height: 100%;
+    display: flex;
+    justify-Content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10%;
+}
+#headerRank img {
+  width: 15%;
+  height: 75%;
 }
