--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
+@font-face {
+  font-family: 'MinhaFonte';
+  src: url('./assets/Font/Inter/Inter-VariableFont_slnt\,wght.ttf')
+}
 *{
   margin: 0;
   padding: 0;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "MinhaFonte";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,9 +28,9 @@ code {
     justify-Content: center;
     align-items: center;
     flex-direction: column;
-    gap: 10%;
+    gap: 6%;
 }
 #headerRank img {
-  width: 15%;
+  width: 40%;
   height: 75%;
 }
