--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: 'MinhaFonte';
-  src: url('./assets/Font/Inter/Inter-VariableFont_slnt\,wght.ttf')
+  font-family: "MinhaFonte";
+  src: url("./assets/Font/Inter/Inter-VariableFont_slnt\,wght.ttf");
 }
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -14,38 +14,64 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-#headerRank{
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-color: #007bff;
-    color: #fff;
-    padding: 4%;
-    height: 100%;
-    display: flex;
-    justify-Content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 6%;
+#headerRank {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: #007bff;
+  color: #fff;
+  padding: 4%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 6%;
 }
 #headerRank img {
   width: 40%;
   height: 75%;
 }
-img{
+img {
   width: 100%;
   height: 100%;
 }
-#imgTemp{
+#imgTemp {
   width: 60%;
   height: 60%;
 }
-#txt{
+#txt {
   overflow: hidden;
 }
-.removeScroll{
+.removeScroll {
   overflow: hidden;
   max-height: 100vh;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2880f2;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 10px;
+  z-index: 10;
+}
+.footer-button {
+  text-align: center;
+  color: white;
+}
+.footer-button a {
+  text-decoration: none;
+  color: white;
+}
+.caption {
+  margin-top: 5px;
+}
+.imgFooter{
+  width: 75%;
+  height: 55%;
 }
