--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ code {
   background-color: #007bff;
   color: #fff;
   padding: 4%;
+  padding-top: 35%;
   height: 100%;
   display: flex;
   justify-content: center;
