--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
   color: #fff;
   padding: 4%;
   padding-top: 35%;
-  height: 100%;
+  height: 75%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,8 +73,8 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 9.5%;
-  bottom: 92%;
+  left: 9.5vw;
+  bottom: 12.5vh;
   position: absolute;
 }
 .selectedIcon2 {
@@ -84,8 +84,8 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 34.5%;
-  bottom: 92%;
+  left: 34.5vw;
+  bottom: 12.5vh;
   position: absolute;
 }
 .selectedIcon3 {
@@ -95,8 +95,8 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 59%;
-  bottom: 92%;
+  left: 59vw;
+  bottom: 12.5vh;
   position: absolute;
 }
 .selectedIcon4 {
@@ -106,8 +106,8 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 84.2%;
-  bottom: 92%;
+  left: 84.2vw;
+  bottom: 12.5vh;
   position: absolute;
 }
 .caption {
