--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 9.5vw;
+  left: 9.5%;
   bottom: 92%;
   position: absolute;
 }
@@ -84,7 +84,7 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 34.5vw;
+  left: 34.5%;
   bottom: 92%;
   position: absolute;
 }
@@ -95,7 +95,7 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 59vw;
+  left: 59%;
   bottom: 92%;
   position: absolute;
 }
@@ -106,7 +106,7 @@ img {
   border-right: 12px solid transparent;
   border-bottom: 8px solid white;
   transform: rotate(180deg);
-  left: 84.2vw;
+  left: 84.2%;
   bottom: 92%;
   position: absolute;
 }
